refactor code and add UT